/*
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//----------------------------------------------
//  Generate command
//----------------------------------------------
//
// third-party/java/protobuf/gen.sh
//
//-----------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.buck.cd.model.kotlin";
option java_outer_classname = "KotlinCDProto";

// best practices to include version number in package
package kotlincd.api.v1;

import "cd/resources/proto/common.proto";
import "cd/resources/proto/javacd.proto";

message BuildKotlinCommand {
    BaseCommandParams baseCommandParams = 1;
    oneof command {
        LibraryJarCommand libraryJarCommand = 2;
        AbiJarCommand abiJarCommand = 3;
    }
}

message BaseCommandParams {
    bool hasAnnotationProcessing = 1;
    bool withDownwardApi = 2;
}

message LibraryJarCommand {
    KotlinExtraParams kotlinExtraParams = 1;
    javacd.api.v1.BaseJarCommand baseJarCommand = 2;
    javacd.api.v1.LibraryJarBaseCommand libraryJarBaseCommand = 3;
}

message AbiJarCommand {
    KotlinExtraParams kotlinExtraParams = 1;
    javacd.api.v1.BaseJarCommand baseJarCommand = 2;
    javacd.api.v1.JarParameters abiJarParameters = 3;
}

message KotlinExtraParams {
    AbsPath pathToKotlinc = 1;
    repeated AbsPath extraClassPaths = 2;
    AbsPath standardLibraryClassPath = 3;
    AbsPath annotationProcessingClassPath = 4;
    AnnotationProcessingTool annotationProcessingTool = 5;
    repeated string extraKotlincArguments = 6;
    // kotlinCompilerPlugin keys are AbsPaths encoded as strings due to limitations in proto3.
    map<string, PluginParams> kotlinCompilerPlugins = 7;
    map<string, AbsPath> kosabiPluginOptions = 8;
    repeated AbsPath friendPaths = 9;
    repeated AbsPath kotlinHomeLibraries = 10;
    string jvmTarget = 11;
    bool shouldGenerateAnnotationProcessingStats = 12;
    bool shouldUseJvmAbiGen = 13;
    bool shouldVerifySourceOnlyAbiConstraints = 14;
}

message PluginParams {
    map<string, string> params = 1;
}

/** Model for KotlinLibraryDescription.AnnotationProcessingTool */
enum AnnotationProcessingTool {
    KAPT = 0;
    JAVAC = 1;
}
